--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,16 @@ php:
 
 env:
   - DB=apc
-  - DB=redis
-  - DB=mongodb
-  - DB=sqlite
-  - DB=mysql
-  - DB=pgsql
-  - DB=memcache
+  #- DB=redis
+  #- DB=mongodb
+  #- DB=sqlite
+  #- DB=mysql
+  #- DB=pgsql
+  #- DB=memcache
 
 before_script:
-  - sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
-  - sh -c "if [ '$DB' = 'apc' ]; then cd APC-* && phpize && ./configure && make && sudo make install && cd ..; rm -fr APC*; fi"
+  #- sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
+  #- sh -c "if [ '$DB' = 'apc' ]; then cd APC-* && phpize && ./configure && make && sudo make install && cd ..; rm -fr APC*; fi"
   - sh -c "if [ '$DB' = 'apc' ]; then echo 'extension=apc.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
   - sh -c "if [ '$DB' = 'apc' ]; then echo 'apc.enable_cli=1' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
   - sh -c "if [ '$DB' = 'redis' ]; then git clone --branch=master --depth=1 git://github.com/nicolasff/phpredis.git phpredis; cd phpredis && phpize && ./configure && make && sudo make install && cd ..; rm -fr phpredis; fi"
@@ -32,10 +32,3 @@ before_script:
 script:
   - phpunit --coverage-text --configuration phpunit.xml.dist
 
-notifications:
-  irc: "irc.freenode.org#ouarz"
-  email:
-    recipients:
-      - dev-team@ouarz.net
-    on_success: change
-    on_failure: change
