--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ before_script:
   #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS apix_tests;' -U postgres; fi"
   #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE DATABASE apix_tests;' -U postgres; fi"
   #- sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcache.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;   fi"
-  - sh -c "if [ '$DB' = 'memcache' ]; then sudo pecl install memcached-2.0.1; /usr/bin/memcached -d; fi"
-   - sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension=memcached.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
+ # - sh -c "if [ '$DB' = 'memcache' ]; then sudo pecl install memcached-2.0.1; /usr/bin/memcached -d; fi"
+  -  sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension=memcached.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
  # - sh -c "if [ '$DB' = 'apc' ]; then echo 'apc.enable_cli=1' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
   - phpenv rehash
   - composer install --dev --prefer-source
