--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS apix_tests;' -U postgres; fi"
   #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE DATABASE apix_tests;' -U postgres; fi"
   #- sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcache.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;   fi"
- - sh -c "if [ '$DB' = 'memcache' ]; then  /usr/bin/memcached -d; fi"
+  -  sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcached.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini  ; fi"
   - phpenv rehash
   - composer install --dev --prefer-source
 
