--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: php
 
 php:
   - 5.3
-  - 5.4
-  - 5.5
-services:
-  - memcached
+  #- 5.4
+ # - 5.5
+#services:
+ # - memcached
 env:
   #- DB=apc
   #- DB=redis
