--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
- # - DB=memcache
+  - DB=memcache
 
 before_script:
   #- sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
