--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ php:
   - 5.3
   #- 5.4
  # - 5.5
-services:
-  - memcached
-  - mongodb
+#services:
+ #- memcached
+  #- mongodb
  
 env:
   #- DB=apc
