--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,18 @@ php:
   - 5.4
   - 5.5
 services:
-  - memcached
-  #- mongodb
+  #- memcached
+  - mongodb
   #- redis
 env:
   #- DB=apc
   
   #- DB=redis
-  #- DB=mongodb
+  - DB=mongodb
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
-  - DB=memcache
+  #- DB=memcache
 
 before_script:
   #- sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
@@ -25,7 +25,7 @@ before_script:
   #- sh -c "if [ '$DB' = 'apc' ]; then echo 'apc.enable_cli=1' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
   # - sh -c "if [ '$DB' = 'redis' ]; then git clone --branch=master --depth=1 git://github.com/nicolasff/phpredis.git phpredis; cd phpredis && phpize && ./configure && make && sudo make install && cd ..; rm -fr phpredis; fi"
   #- sh -c "if [ '$DB' = 'redis' ]; then echo 'extension=redis.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
-  #- sh -c "if [ '$DB' = 'mongodb' ]; then sudo pecl install mongo; sudo /etc/init.d/mongodb start; fi"
+   - sh -c "if [ '$DB' = 'mongodb' ]; then sudo pecl upgrade mongo; sudo /etc/init.d/mongodb start; fi"
   # - sh -c "if [ '$DB' = 'mongodb' ]; then echo 'extension = mongo.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ; fi"
   #- sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE IF NOT EXISTS apix_tests;'; fi"
   #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS apix_tests;' -U postgres; fi"
