--- a/.travis.yml
+++ b/.travis.yml
@@ -3,36 +3,36 @@ language: php
 php:
   #- 5.3
   - 5.4
-  #- 5.5
+ # - 5.5
 services:
   #- memcached
   - mongodb
   #- redis
 env:
-  #- DB=apc
+  - DB=apc
   
-  #- DB=redis
+  - DB=redis
   - DB=mongodb
-  #- DB=sqlite
-  #- DB=mysql
-  #- DB=pgsql
-  #- DB=memcache
+  - DB=sqlite
+  - DB=mysql
+  - DB=pgsql
+  - DB=memcache
 
 before_script:
   #- sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
   #- sh -c "if [ '$DB' = 'apc' ]; then cd APC-* && phpize && ./configure && make && sudo make install && cd ..; rm -fr APC*; fi"
-  #- sh -c "if [ '$DB' = 'apc' ]; then echo 'extension=apc.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
-  #- sh -c "if [ '$DB' = 'apc' ]; then echo 'apc.enable_cli=1' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
-  # - sh -c "if [ '$DB' = 'redis' ]; then git clone --branch=master --depth=1 git://github.com/nicolasff/phpredis.git phpredis; cd phpredis && phpize && ./configure && make && sudo make install && cd ..; rm -fr phpredis; fi"
-  #- sh -c "if [ '$DB' = 'redis' ]; then echo 'extension=redis.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
+  - sh -c "if [ '$DB' = 'apc' ]; then echo 'extension=apc.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
+  - sh -c "if [ '$DB' = 'apc' ]; then echo 'apc.enable_cli=1' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
+  - sh -c "if [ '$DB' = 'redis' ]; then git clone --branch=master --depth=1 git://github.com/nicolasff/phpredis.git phpredis; cd phpredis && phpize && ./configure && make && sudo make install && cd ..; rm -fr phpredis; fi"
+  - sh -c "if [ '$DB' = 'redis' ]; then echo 'extension=redis.so' >> `php --ini | grep 'Loaded Configuration' | sed -e 's|.*:\s*||'`; fi"
   #- sh -c "if [ '$DB' = 'mongodb' ]; then sudo pecl upgrade mongo;  fi"
   - sh -c "if [ '$DB' = 'mongodb' ]; then echo 'extension = mongo.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ; fi"
-  #- sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE IF NOT EXISTS apix_tests;'; fi"
-  #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS apix_tests;' -U postgres; fi"
-  #- sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE DATABASE apix_tests;' -U postgres; fi"
-  #- sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcache.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;   fi"
+  - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE IF NOT EXISTS apix_tests;'; fi"
+  - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS apix_tests;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE DATABASE apix_tests;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcache.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;   fi"
   #-  sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcached.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini  ; fi"
- # - sh -c "if [ '$DB' = 'memcache' ]; then sudo pecl install memcached-2.0.1; /usr/bin/memcached -d; fi"
+  - sh -c "if [ '$DB' = 'memcache' ]; then sudo pecl install memcached-2.0.1; /usr/bin/memcached -d; fi"
   - phpenv rehash
   - composer install --dev --prefer-source
 
