--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 language: php
 
 php:
-  #- 5.3
+  - 5.3
   - 5.4
- # - 5.5
+  - 5.5
 services:
-  #- memcached
+  - memcached
   - mongodb
-  #- redis
+  - redis
 env:
   - DB=apc
   
   - DB=redis
   - DB=mongodb
-  - DB=sqlite
-  - DB=mysql
-  - DB=pgsql
+  #- DB=sqlite
+  #- DB=mysql
+  #- DB=pgsql
   - DB=memcache
 
 before_script:
