--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ php:
   - 5.5
 services:
   - memcached
-  - mongodb
-  - redis
+  #- mongodb
+  #- redis
 env:
-  - DB=apc
+  #- DB=apc
   
-  - DB=redis
-  - DB=mongodb
+  #- DB=redis
+  #- DB=mongodb
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
