--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: php
 
 php:
-  #- 5.3
+  - 5.3
   - 5.4
-  #- 5.5
+  - 5.5
 services:
-  #- memcached
+  - memcached
   - mongodb
-  #- redis
+  - redis
 env:
   - DB=apc
   
-  #- DB=redis
-  #- DB=mongodb
+  - DB=redis
+  - DB=mongodb
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
