--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ services:
 env:
   - DB=apc
   
-  - DB=redis
-  - DB=mongodb
+  #- DB=redis
+ # - DB=mongodb
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
-  - DB=memcache
+  #- DB=memcache
 
 before_script:
   #- sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
