--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ php:
   - 5.3
   - 5.4
   - 5.5
-  #- 5.6
+  - 5.6
 services:
   - memcached
   - mongodb
   - redis
 env:
-  - DB=apc
+  #- DB=apc
   
   #- DB=redis
- # - DB=mongodb
+  - DB=mongodb
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
