--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,21 @@ language: php
 
 php:
   - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
+ # - 5.4
+  #- 5.5
+  #- 5.6
 #services:
  # - memcached
   #- mongodb
   #- redis
 env:
   - DB=apc
-  - DB=redis
-  - DB=mongodb
+  #- DB=redis
+  #- DB=mongodb
   #- DB=sqlite
   #- DB=mysql
   #- DB=pgsql
-  - DB=memcache
+  #- DB=memcache
 
 before_script:
   #- sh -c "if [ '$DB' = 'apc' ]; then curl -o APC.tgz http://pecl.php.net/get/APC; tar -xzf APC.tgz; fi"
