--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ php:
   #- redis
 env:
   global:
+     - test=vidya
      - DB=apc
       # - DB=redis
      - DB=mongodb
@@ -42,3 +43,4 @@ script:
   - echo $language
   - echo $privatekey
   - echo $USER
+  - echo test
