--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ before_script:
 
 script:
   - phpunit --coverage-text --configuration phpunit.xml.dist
-  
+  - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage --configuration phpunit.xml.dist
