--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,7 @@ before_script:
 script:
   - phpunit --coverage-text --configuration phpunit.xml.dist
   - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage --configuration phpunit.xml.dist
+notifications:
+    email:
+        - vidyac.raghav@gmail.com
+        - buildsampletest@gmail.com
