--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
  # - 5.3
   #- 5.4
   - 5.5
-  #- 5.6
+  - 5.6
 
 env:
  global:
@@ -33,5 +33,7 @@ before_script:
 script:
   - phpunit --coverage-text --configuration phpunit.xml.dist
   - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage --configuration phpunit.xml.dist
+parallelized_test: true
+archive: true
 notifications:
     email: false
