--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ before_script:
 script:
   - phpunit --coverage-text --configuration phpunit.xml.dist
   - phpunit  --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage --configuration phpunit.xml.dist
-parallelized_test: true
+#parallelized_test: true
 
 archive: true
 
-cache: true
+#cache: true
 build_image: shippable/minv2
