--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: php
 
 build_image: shippable/minv2:beta 
 
+
 php:
  # - 5.3
   - 5.4
@@ -38,4 +39,4 @@ parallelized_test: true
 archive: true
 
 cache: true
-build_image: shippable/minv2
+#build_image: shippable/minv2
