--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-build_image: shippable/minv2
+#build_image: shippable/minv2
 
 
 php:
@@ -38,5 +38,5 @@ parallelized_test: true
 
 archive: true
 
-cache: true
+#cache: true
 #build_image: shippable/minv2
