--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
   - sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcache.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ;   fi"
   #-  sh -c "if [ '$DB' = 'memcache' ]; then echo 'extension = memcached.so'>> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini  ; fi"
   - sh -c "if [ '$DB' = 'memcache' ]; then sudo pecl install memcached-2.0.1; /usr/bin/memcached -d; fi"
+  - travis_retry composer self-update
   - phpenv rehash
   - composer install --dev --prefer-source
 
